# ocean_modelisation

./: .gitignore  CMakeLists.txt  README.md
src/: Dvector.cpp  Dvector.h  GerstnerWave.cpp  GerstnerWave.h  GerstnerWaveModel.cpp  GerstnerWaveModel.h  Height.cpp  Height.h  Makefile  Ocean.cpp  Ocean.h  PhilipsWave.cpp  PhilipsWave.h  PhilipsWave.txt  PhilipsWaveModel.cpp  PhilipsWaveModel.h  Wave.cpp  Wave.h  WaveModel.cpp  WaveModel.h  camera.cxx  camera.hxx  core  fftcl.txt  lab2.txt  read.txt  resize  resize.txt  test1  testB  testB.cpp  testCpx  testFftcl  testGerstnerWave  testHeight  testOcean  testOcean.txt  unaire  window.cxx  window.hxx
test_file/: read.txt  resize.txt  test.txt  write.txt
tests/: InitRead.cpp  InitRead.cpp~  Operators.cpp  Operators.cpp~  main.cxx  main.cxx~  main_gerstner.cxx  main_gerstner.cxx~  testComplex.cpp  testComplex.cpp~  testFFTCL.cpp  testFFTCL.cpp~  testGerstner.cpp  testGerstner.cpp~  testGerstnerWaveModel.cpp  testGerstnerWaveModel.cpp~  testHeight.cpp  testHeight.cpp~  testOcean.cpp  testOcean.cpp~  testOpUn.cpp  testOpUn.cpp~  testP1.cpp  testPhilips.cpp  testPhilips.cpp~  testPhilipsWaveModel.cpp  testPhilipsWaveModel.cpp~  testResize.cpp  testResize.cpp~
